--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
