--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "mongoose": "^8.13.2",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.16",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
